# biquge-rs

./: .gitignore  README.md  run.md
backend/: Cargo.toml
backend/src/: db.rs  main.rs  models.rs  seed.rs
backend/src/handlers/: categories.rs  chapters.rs  home.rs  mod.rs  novels.rs  rankings.rs  search.rs
frontend/: Cargo.toml  Trunk.toml  index.html  style.css
frontend/src/: api.rs  app.rs  main.rs  types.rs
frontend/src/components/: breadth.rs  floating_buttons.rs  footer.rs  header.rs  mod.rs  nav.rs  novel_card.rs  pagination.rs  ranking_list.rs  reader_settings.rs  top_bar.rs
frontend/src/pages/: all_novels.rs  category.rs  home.rs  mod.rs  novel.rs  rankings.rs  reader.rs  search.rs
