[package]
name = "biquge-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-net = "0.5"
gloo-storage = "0.3"
gloo-timers = "0.3"
gloo-events = "0.2"
gloo-utils = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "HtmlSelectElement", "HtmlInputElement", "HtmlElement",
    "KeyboardEvent", "Event", "EventTarget",
    "Window", "Document", "Element",
    "ScrollBehavior", "ScrollToOptions"
] }
